--- a/reloj2/reloj2.html
+++ b/reloj2/reloj2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id ="time">
-        <div class="circle" style='--clr:#ff2972'>
+        <div class="circle" style='--clr:#0fedd3'>
             <svg>
                 <circle cx='70' cy='70' r='70'></circle>
                 <circle cx='70' cy='70' r='70'></circle>
@@ -16,7 +16,7 @@
             <div class='dot'></div>
             <div id="hours">00</div>
         </div>
-        <div class="circle" style='--clr:#fee800'>
+        <div class="circle" style='--clr:#400245'>
             <svg>
                 <circle cx='70' cy='70' r='70'></circle>
                 <circle cx='70' cy='70' r='70'></circle>
@@ -24,7 +24,7 @@
             <div class='dot'></div>
             <div id="minutes">00</div>
         </div>
-        <div class="circle" style='--clr:#04fc43'>
+        <div class="circle" style='--clr:#080363'>
             <svg>
                 <circle cx='70' cy='70' r='70'></circle>
                 <circle cx='70' cy='70' r='70'></circle>
