--- a/Eventos/evento.html
+++ b/Eventos/evento.html
@@ -7,6 +7,10 @@
     <title>Eventos</title>
 </head>
 <body>
+      <div class="principal_imagen">
+        <h2>Próximos eventos</h2>
+        <img src="./img/img_even.png" class="imagen">
+    </div>
     <div class="eventos">
         <div class="formulario">
             <form>
@@ -15,8 +19,13 @@
                 <input type="submit" id="agregar" value="Agregar evento"/>
             </form>
         </div>
-        <div class="listaEventos2" id="listaEventos"></div>
     </div>
+    <div class="listaEventos2" id="listaEventos"></div>
+
+    <footer class="derechosAutor">
+        <a href="https://www.flaticon.es/iconos-gratis/eventos" title="eventos iconos">Eventos iconos creados por Vectors Tank - Flaticon</a>
+    </footer>
+
     <script src="./evento.js"></script>
 </body>
 </html>
